name:                csv-housenumber-splitter
version:             0.1.0
synopsis:            Split a house number and its extension in a CSV file into
                     two separate fields
homepage:            http://github.com/MelleB/csv-housenumber-splitter
license:             BSD3
license-file:        LICENSE
author:              MelleB
category:            Data
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 7.4.1

source-repository    head
  type:              git
  location:          git://github.com/melleb/csv-housenumber-splitter.git

executable csv-housenumber-splitter
  main-is:             hnsplit.hs
  build-depends:       base >=4.5,
                       text >= 0.11,
                       filepath
  ghc-options:         -Wall
